#3.2 Saving the User Name part One
form을 통해 input 창 생성

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="js-clock">
       <h1 class="js-title">00:00</h1>
     </div>
-
+    <form class="js-form">
+      <input type="text" placeholder="What is yoyr name?" />
+    </form>
     <script src="clock.js"></script>
   </body>
 </html>
